--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,17 @@ before_install:
   - docker build -t idankish/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true idankish/docker-react npm run test  
+  - docker run -e CI=true idankish/docker-react npm run test
+
+deploy:
+  provider: elasticbeanstalk
+  region: "eu-west-1"
+  app: "frontend"
+  env: "Frontend-env"
+  bucket_name: "elasticbeanstalk-eu-west-1-819463086664"
+  bucket_path: "frontend"
+  on:
+    branch: main
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: "$AWS_SECRET_KEY"
+        
