fixing travis CI file

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,11 @@ script:
 deploy:
   provider: elasticbeanstalk
   region: "eu-west-1"
-  app: "frontend"
-  env: "Frontend-env"
+  app: "Frontend-react-app"
+  env: "Frontend-react-app-env"
   bucket_name: "elasticbeanstalk-eu-west-1-819463086664"
   bucket_path: "frontend"
   on:
     branch: main
   access_key_id: $AWS_ACCESS_KEY
   secret_access_key: "$AWS_SECRET_KEY"
-        
